--- a/course-materials/week10.qmd
+++ b/course-materials/week10.qmd
@@ -1,5 +1,5 @@
 ---
-title: "TBD, Wrap-up"
+title: "Data visualization in JavaScript, with Dr. Allison Horst, Wrap-up"
 subtitle: "Week 10"
 description: "Wednesday March 11^th^, 2026"
 ---
@@ -17,26 +17,15 @@ knitr::include_graphics(here::here("images", "horst-touchstones.png"))
 *I hope you all feel this way after another quarter of classes under your belts! Artwork by [Allison Horst](https://allisonhorst.com/){target="_blank"}.*
 :::
 
-## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep} 
 
-### A. Install required packages
-
-```{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: false
-library(waffle) # for making waffle (square pie) charts in R
-library(ggbump) # a geom for creating bump charts
-```
-
-### B. Download .qmd templates 
-
-Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week10/` folder. No need to review any of the code ahead of class -- we'll be walking through it all together.
+*No required prep for this week's lecture!*
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
+| *NA* | Data Visualization in JavaScript (template) | Data Visualization in JavaScript (key) |
 | [Lecture 10.1: quarter recap](lecture-slides/SLIDES-recap.qmd){target="_blank"} | *NA* | *NA* |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
@@ -44,7 +33,7 @@ Download all necessary templates (links in the table below) and save them to a `
 
 ::: {.callout-important}
 ## TODO
-- data viz hackathon instead of practice presentations? depends on what lecture 10 ends up being
+- data viz hackathon instead of practice presentations
 :::
 
 ### A. Prepare your final presentation 
