--- a/course-materials/lecture-slides/SLIDES-good-viz.qmd
+++ b/course-materials/lecture-slides/SLIDES-good-viz.qmd
@@ -13,13 +13,13 @@ editor_options:
 
 ## {#title-slide data-menu-title="Title Slide" background="#053660"} 
 
-[EDS 240: Lecture 5.1]{.custom-title}
+[EDS 240: Lecture 4.1]{.custom-title}
 
 [*What makes a good data viz?*]{.custom-subtitle}
 
 <hr class="hr-teal">
 
-[Week 5 | February 3^rd^, 2025]{.custom-subtitle3}
+[Week 4 | January 28^th^, 2026]{.custom-subtitle3}
 
 ---
 
@@ -62,6 +62,42 @@ Choosing the right graphic form is just the first step! It's important to consid
 ::: {.center-text .body-text-m}
 We'll start by familiarizing ourselves with a general set of rules and best practices for making "good" data viz.
 :::
+
+---
+
+## {#game data-menu-title="Design game"} 
+
+[But first, let's test your eye for design!]{.slide-title}
+
+<hr>
+
+::: {.center-text}
+**[https://www.matplotlib-journey.com/bonus/design-principles](https://www.matplotlib-journey.com/bonus/design-principles){target="_blank"}**
+:::
+
+```{r design-game}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "design-game.png"))
+```
+
+```{r countdown-game}
+countdown::countdown(
+  minutes = 6,
+  # left = 0, right = 0,
+  # Fanfare when it's over
+  play_sound = TRUE,
+  color_border              = "#FFFFFF",
+  color_text                = "#7aa81e",
+  color_running_background  = "#7aa81e",
+  color_running_text        = "#FFFFFF",
+  color_finished_background = "#ffa07a",
+  color_finished_text       = "#FFFFFF",
+  font_size = "2em",
+  )
+```
 
 ---
 
@@ -148,10 +184,10 @@ Do so by starting with a complete theme (e.g. `theme_classic()`, `theme_void()`)
 ::: {.column width="50%"}
 
 ::: {.center-text .body-text-s .gray-text}
-Low Data-Ink ratio
+Lower-Ink ratio
 :::
 
-```{r}
+```{r lower-dir}
 #| eval: true
 #| echo: false
 library(tidyverse)
@@ -174,10 +210,10 @@ ggplot(penguins, aes(x = body_mass_g, fill = species)) +
 ::: {.column width="50%"}
 
 ::: {.center-text .body-text-s .gray-text}
-High Data-Ink ratio
+Higher Data-Ink ratio
 :::
 
-```{r}
+```{r higher-dir}
 #| eval: true
 #| echo: false
 library(tidyverse)
@@ -239,7 +275,7 @@ A general rule of thumb: **aim to maximize the data-ink ratio while not sacrific
 
 Ask yourself, *"Does this legend provide additional information that I can't get elsewhere?"*. If not, remove a legend using:
 
-```{r}
+```{r remove-legend}
 #| eval: false
 #| echo: true
 plot +
@@ -254,7 +290,7 @@ plot +
 
 ::: {.column width="50%"}
 
-```{r}
+```{r with-legend}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -280,7 +316,7 @@ ggplot(penguins, aes(x = fct_infreq(species), fill = species)) +
 :::
 
 ::: {.column width="50%"}
-```{r}
+```{r without-legend}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -326,7 +362,7 @@ We can use a combination of `coord_flip()` (or remap aesthetics), `geom_text()`,
 
 ::: {.column width="50%"}
 
-```{r}
+```{r with-y-axis}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -337,7 +373,9 @@ library(palmerpenguins)
 ggplot(penguins, aes(x = fct_infreq(species), fill = species)) +
   geom_bar(alpha = 0.8) +
   scale_fill_manual(values = c("darkorange","purple","cyan4")) +
-  labs(x = "Species", y = "Count", fill = "Species") +
+  labs(x = "Species", y = "Count", fill = "Species",
+       title = "Penguins counts at Palmer Station LTER", 
+       subtitle = "2007 - 2009") +
   theme_classic() +
   theme(
     axis.line = element_blank(),
@@ -346,13 +384,16 @@ ggplot(penguins, aes(x = fct_infreq(species), fill = species)) +
     legend.text = element_text(size = 15),
     legend.title = element_text(size = 17),
     axis.title.x = element_text(margin = margin(t = 20, r = 0, b = 0, l = 0)),
-    axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0))
+    axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)),
+    plot.title.position = "plot",
+    plot.title = element_text(size = 25),
+    plot.subtitle = element_text(size = 20)
   )
 ```
 :::
 
 ::: {.column width="50%"}
-```{r}
+```{r with-labels}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -363,7 +404,7 @@ library(palmerpenguins)
 ggplot(penguins, aes(x = fct_rev(fct_infreq(species)), fill = species)) +
   geom_bar(alpha = 0.8) +
   coord_flip() +
-  geom_text(aes(label = after_stat(count)), stat = "count", hjust = 1.5, size = 6, colour = "white") +
+  geom_text(aes(label = after_stat(count)), stat = "count", hjust = 1.5, size = 7, colour = "white") +
   scale_fill_manual(values = c("darkorange","purple","cyan4")) +
   labs(x = "Species", y = "Count", fill = "Species",
        title = "Penguins counts at Palmer Station LTER", 
@@ -672,9 +713,29 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species, sha
 
 ---
 
+## {#legend-example data-menu-title="Legend"} 
+
+[Move the legend]{.slide-title}
+
+<hr>
+
+```{r climate-risk-map}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "water-stress-sb-map.png"))
+```
+
+::: {.footer}
+Source: [Every Place Has Its Own Climate Risk. What Is It Where You Live?](https://www.nytimes.com/interactive/2020/09/18/opinion/wildfire-hurricane-climate.html){target="_blank"}, by Stuart A. Thompson and Yaryna Serkez (NYT)
+:::
+
+---
+
 ## {#use-annotations-neil data-menu-title="Use annotations (Neil)"} 
 
-[Use annotations to improve readability / interpretability]{.slide-title3}
+[Use annotations to guide interpretation]{.slide-title}
 
 <hr>
 
@@ -728,7 +789,7 @@ countdown::countdown(
 
 ## {#use-annotations-covid data-menu-title="Use annotations (COVID)"} 
 
-[Use annotations to improve readability / interpretability]{.slide-title3}
+[Use annotations to guide interpretation]{.slide-title}
 
 <hr>
 
@@ -754,6 +815,26 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 ---
 
+## {#annotations-example data-menu-title="Annotations"} 
+
+[Use annotations to guide interpretation]{.slide-title}
+
+<hr>
+
+```{r accelerated-heating-chart}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "accelerated-warming.png"))
+```
+
+::: {.footer}
+Source: [I Study Climate Change. The Data Is Telling Us Something New.](https://www.nytimes.com/2023/10/13/opinion/climate-change-excessive-heat-2023.html){target="_blank"}, by Zeke Hausfather (NYT)
+:::
+
+---
+
 ##  {#put-in-context data-menu-title="# Provide context #" background="#047C90"}
 
 <div class="page-center vertical-center">
@@ -761,6 +842,27 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 </div>
 
 ---
+
+## {#baseline data-menu-title="Baseline"} 
+
+[Add a baseline comparison]{.slide-title}
+
+<hr>
+
+```{r airport-temps}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "airport-temps.png"))
+```
+
+::: {.footer}
+Source: [Why We’re Experiencing So Many Unusually Hot Summer Nights](https://www.nytimes.com/interactive/2021/09/13/upshot/up-hot-nights.html){target="_blank"}, by Aatish Bhatia and Josh Katz (TheUpshot, NYT)
+:::
+
+
+<!-- ---
 
 ## {#wilke-context data-menu-title="Provide context"} 
 
@@ -781,7 +883,7 @@ The area under each curve corresponds to the total number of male and female pas
 :::
 
 ```{r}
-#| eval: true
+#| eval: false
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
@@ -796,7 +898,7 @@ The colored areas show the density estimates of the ages of M and F passengers, 
 :::
 
 ```{r}
-#| eval: true
+#| eval: false
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
@@ -808,13 +910,13 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 ::: {.footer}
 Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/histograms-density-plots.html){target="_blank"}, by Claus Wilke. For an example with code, check out [this slide](SLIDES-distributions.qmd#scaled-density){target="_blank"}.
-:::
+::: -->
 
 ---
 
 ## {#benchmark-values data-menu-title="Benchmark values"} 
 
-[Add benchmark values]{.slide-title}
+[Add benchmarks]{.slide-title}
 
 <hr>
 
@@ -825,18 +927,67 @@ Add vertical (`geom_vline()`) or horizontal (`geom_hline()`) lines at important 
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+
+```{r mko-temps}
 #| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+#| fig-asp: 0.7
+#..........................load packages.........................
+library(tidyverse)
+library(ggridges)
+
+#..........................import data...........................
+mko <- read_csv(here::here("course-materials", "data", "lecture","mohawk_mooring_mko_20250117.csv"))
+
+#............................wrangle.............................
+mko_clean <- mko |>
+  select(year, month, day, decimal_time, Temp_bot, Temp_top, Temp_mid) |>
+  mutate(year = as.factor(year),
+         month = as.factor(month),
+         day = as.numeric(day)) |>
+  mutate(month_name = month.name[month]) |> 
+  naniar::replace_with_na(replace = list(Temp_bot = 9999, 
+                                         Temp_top = 9999, 
+                                         Temp_mid = 9999)) |>
+  select(year, month, day, month_name, Temp_bot, Temp_mid, Temp_top)
+
+#..............................plot..............................
+mko_clean |> 
+  mutate(month_name = factor(month_name, levels = rev(month.name))) |> 
+  ggplot(aes(x = Temp_bot, y = month_name, fill = after_stat(x))) + 
+  ggridges::geom_density_ridges_gradient(rel_min_height = 0.01, scale = 3) +
+  geom_vline(xintercept = 11, linetype = "dashed", color = "#6B6B6B") +
+  geom_vline(xintercept = 16, linetype = "dashed", color = "#6B6B6B") +
+  geom_vline(xintercept = 21, linetype = "dashed", color = "#6B6B6B") +
+  scale_fill_gradientn(colors = c("#2C5374","#849BB4", "#D9E7EC", "#EF8080", "#8B3A3A")) +
+  labs(x = "Bottom Temperature (°C)",
+       title = "Bottom Temperatures at Mohawk Reef, Santa Barbara, CA",
+       subtitle = "Temperatures (°C) aggregated by month from 2005-2024") +
+  theme_ridges() +
+  theme(legend.position = "none", 
+        axis.title.y = element_blank(),
+        plot.title.position = "plot",
+        panel.grid.major.x = element_blank(),
+        plot.title = element_text(size = 16),
+        plot.subtitle = element_text(size = 14, margin = margin(b = 15)),
+        axis.title.x = element_text(margin = margin(t = 15))
+        ) 
+```
+
+```{r}
+#| eval: false
 #| echo: false
 #| out-width: "80%"
 #| fig-align: "center"
-knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "mko_temps.png"))
+#knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "mko_temps.png"))
 ```
 :::
 
 ::: {.column width="50%"}
 [*A minimal code example:*]{.body-text-s}
-```{r}
+```{r geom-vline}
 #| eval: false
 #| echo: true
 plot + 
@@ -849,7 +1000,7 @@ plot +
 ::::
 
 ::: {.footer}
-[**Fig cap:** Temporal Variation in Bottom Temperature. Monthly bottom (4.5 m depth) temperatures at Mohawk Reef (34.396290, -119.731297) in Santa Barbara, CA compiled from 2005-2017. Vertical dashed lines represent three of four treatment temperatures (11, 16, 21°C). Data Source: Santa Barbara Coastal Long-Term Ecological Research group (adapted from [Csik et al. 2023](https://doi.org/10.3389/fmars.2023.1072807){target="_blank"})]{.body-text-s}
+[**Fig cap:** Temporal Variation in Bottom Temperature. Monthly bottom (4.5 m depth) temperatures at Mohawk Reef (34.396290, -119.731297) in Santa Barbara, CA compiled from 2005-2022. Vertical dashed lines represent three of four treatment temperatures (11, 16, 21°C). Data Source: Santa Barbara Coastal Long-Term Ecological Research group (adapted from [Csik et al. 2023](https://doi.org/10.3389/fmars.2023.1072807){target="_blank"})]{.body-text-s}
 :::
 
 ---
@@ -862,8 +1013,6 @@ plot +
 
 For data where the **relevant comparison is the x = y line** (e.g. scatter plots of paired data), **plot the 1:1 line**. 
 
-Below, the author compares gene expression levels in a mutant virus to the non-mutated (wild-type) variant. He presents three (increasingly better) versions of the same plot:
-
 <br>
 
 :::: {.columns}
@@ -872,7 +1021,7 @@ Below, the author compares gene expression levels in a mutant virus to the non-m
 ::: {.center-text .body-text-s .gray-text}
 Bad
 :::
-```{r}
+```{r xy-bad}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -885,7 +1034,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ::: {.center-text .body-text-s .gray-text}
 Better
 :::
-```{r}
+```{r xy-better}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -898,7 +1047,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ::: {.center-text .body-text-s .gray-text}
 Best
 :::
-```{r}
+```{r xy-best}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -910,7 +1059,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ::::
 
 ::: {.footer}
-Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/balance-data-context.html){target="_blank"}, by Claus Wilke
+Gene expression levels in a mutant virus to the non-mutated (wild-type) variant. Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/balance-data-context.html){target="_blank"}, by Claus Wilke
 :::
 
 ---
@@ -923,7 +1072,7 @@ Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz
 
 I *highly* recommend watching this awesome TED talk, [The beauty of data visualization](https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization?referrer=playlist-making_sense_of_too_much_data&subtitle=en){target="_blank"}, by [David McCandless](){target="_blank"}. David does a fabulous job of showing the importance of providing context in your data visualizations.
 
-```{r}
+```{r billion-pound}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -953,11 +1102,11 @@ Source: [The Billion Dollar O Gram](https://informationisbeautiful.net/visualiza
 
 <hr>
 
-Highlight data by coloring groups of interest either manually or by using helpful packages, like `{gghighlight}` (we saw an example of this in the [visualizing evolution](SLIDES-evolution.qmd#spaghetti-plot){target="_blank"}):
+Highlight data by coloring groups of interest either manually or by using helpful packages, like `{gghighlight}` (we saw an example of this in the [visualizing evolution lecture](SLIDES-evolution.qmd#spaghetti-plot){target="_blank"}):
 
 <br>
 
-```{r}
+```{r penguins-highlight-bar}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -1003,7 +1152,7 @@ ggplot() +
 
 Or add annotations to your plots to call attention to data of interest (here, shown using the [`{ggforce}` package](https://ggforce.data-imaginist.com/index.html){target="_blank"}; minimal code example, below):
 
-```{r}
+```{r ggforce-sample}
 #| eval: false
 #| echo: true
 
@@ -1014,7 +1163,7 @@ plot +
 
 <br>
 
-```{r}
+```{r ggforce-plot}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -1162,7 +1311,7 @@ There *may* be circumstances where the above are executed well...but more often 
 
 It can be nearly impossible to process many different variables, colors, shapes, etc. on the same visualization (and realistically, most people won't want to take the time to even try):
 
-```{r}
+```{r overload-map}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -1184,7 +1333,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 It can be nearly impossible to process many different variables, colors, shapes, etc. on the same visualization (and realistically, most people won't want to take the time to even try):
 
-```{r}
+```{r idk-plot}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -1206,7 +1355,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 It can be nearly impossible to process many different variables, colors, shapes, etc. on the same visualization (and realistically, most people won't want to take the time to even try):
 
-```{r}
+```{r parallel-plot}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
@@ -1261,7 +1410,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 <br>
 <br>
 
-```{r}
+```{r dual-axis1a}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1296,7 +1445,7 @@ Example from [Why not to use two axes, and what to use instead](https://blog.dat
 <br>
 <br>
 
-```{r}
+```{r dual-axes1b}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1306,7 +1455,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 :::
 
 ::: {.column width="50%"}
-```{r}
+```{r dual-axis2}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1388,7 +1537,7 @@ Separate your data series into **side-by-side charts** -- this allows us to crea
 
 <br>
 
-```{r}
+```{r two-charts}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1414,7 +1563,7 @@ Example from [Why not to use two axes, and what to use instead](https://blog.dat
 
 <br>
 
-```{r}
+```{r indexed}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1440,7 +1589,7 @@ Consider **prioritizing and plotting the more important of the two data series**
 
 <br>
 
-```{r}
+```{r dual-labeling}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1466,7 +1615,7 @@ A **connected scatterplot** places one variable on the y-axis and the other on t
 
 <br>
 
-```{r}
+```{r connected-scatterplot}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1495,7 +1644,7 @@ Example from [Why not to use two axes, and what to use instead](https://blog.dat
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+```{r single-pie1}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1530,7 +1679,7 @@ Examples from [EDS 221](https://docs.google.com/presentation/d/1MzyYCAzae8IU43UY
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+```{r single-pie2}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1540,7 +1689,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 :::
 
 ::: {.column width="50%"}
-```{r}
+```{r single-bar}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1569,7 +1718,7 @@ Examples from [221](https://docs.google.com/presentation/d/1MzyYCAzae8IU43UYc9ER
 
 . . .  is actually a problem with humans -- **we're not so great at comparing angles**. And we're even worse at comparing angles **across multiple** pie charts:
 
-```{r}
+```{r multiple-pies}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1596,7 +1745,7 @@ Examples from [EDS 221](https://docs.google.com/presentation/d/1MzyYCAzae8IU43UY
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+```{r good-pie}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1635,44 +1784,40 @@ Examples from [EDS 221](https://docs.google.com/presentation/d/1MzyYCAzae8IU43UY
 
 ## {#treemap data-menu-title="Pie (alt: treemap)"}
 
-[Pie chart alternative: treemap]{.slide-title}
+[Pie chart alternatives: treemaps & waffles]{.slide-title}
 
 <hr>
 
-<br>
-
-As an alternative to a pie chart, consider [**treemaps**](https://www.data-to-viz.com/graph/treemap.html){target="_blank"}. Treemaps display hierarchical data as a set of nested rectangles -- simpler versions can be used to display parts of a whole using rectangles (which are easier for us to estimate than angles).
+Consider [**treemaps**](https://datavizproject.com/data-type/treemap/){target="_blank"} or [**waffle charts**](https://datavizproject.com/data-type/percentage-grid/){target="_blank"}, which effectively show parts-to-whole relationships without requiring viewers to compare angles.
 
 :::: {.columns}
 
 ::: {.column width="50%"}
-<br>
-
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "100%"
-knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "treemap-simple.png"))
-
-```
-
-::: {.center-text .body-text-s .gray-text}
-*Source: [From Data to Viz](https://www.data-to-viz.com/caveat/pie.html){target="_blank"}*
-:::
-:::
-
-::: {.column width="50%"}
-```{r}
+```{r treemap}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
 #| out-width: "60%"
-knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "treemap-nested.png"))
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "cardelle-treemap.png"))
+
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-*Source: [`{treemapify}` pkgdown site](https://wilkox.org/treemapify/){target="_blank"}*
+*Source: [Exploring 25 years of natural disasters](https://jocardelle.github.io/posts/2025-03-11-natural-disasters-infographic/natural-disasters-infographic.html){target="_blank"}, by Jo Cardelle (MEDS 2025, EDS 240 final project)*
+:::
+:::
+
+::: {.column width="50%"}
+```{r water-waffle}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "90%"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "water-waffle.png"))
+```
+
+::: {.center-text .body-text-s .gray-text}
+*Source: [Comparisons: waffle - 2015 daily water use](https://www.usgs.gov/media/images/comparisons-waffle-2015-daily-water-use){target="_blank"}, by USGS Water Resources Mission Area*
 :::
 :::
 
@@ -1690,7 +1835,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 <br>
 
-```{r}
+```{r occlusion}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1716,7 +1861,7 @@ Source: [Data Visualization: Why 3D charts are a terrible idea](https://medium.c
 
 <br>
 
-```{r}
+```{r perspective-distortion}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1742,7 +1887,7 @@ Consider how gray and blue areas visually compare in the 3D version? What about 
 
 <br>
 
-```{r}
+```{r gratuitous-3d}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1768,7 +1913,7 @@ Source: [Data Visualization: Why 3D charts are a terrible idea](https://medium.c
 
 A plot with three genuine position scales (x, y, and z) to represent `mtcars` data (viewed from four different perspectives:
 
-```{r}
+```{r 3d-position-scales}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1792,7 +1937,7 @@ If we primarily care about fuel efficiency as the response variable, **plot it t
 
 <br>
 
-```{r}
+```{r 2d-fuel-eff}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1818,7 +1963,7 @@ Source: [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/no-3
 
 <br>
 
-```{r}
+```{r bubble-fuel-eff}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1870,7 +2015,7 @@ Data visualization is both a science and an *art*. **Following these rules / bes
 
 <hr>
 
-```{r}
+```{r iraq-alt}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -1903,7 +2048,7 @@ Image & caption source: [Master the rules - then break them](https://www.datylon
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+```{r conf-rooms}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -1931,7 +2076,7 @@ Clearing the Air, by [Christopher Ingraham](https://www.washingtonpost.com/peopl
 
 ::::
 
-```{r}
+```{r countdown-conf}
 countdown::countdown(
   minutes = 2,
   # left = 0, right = 0,
@@ -1951,7 +2096,7 @@ countdown::countdown(
 
 ## {#co2-2 data-menu-title="CO2 in conf rooms"} 
 
-```{r}
+```{r conf-notes}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -1974,7 +2119,7 @@ Annotations adapted from [@chezVoila](https://twitter.com/chezVoila/status/11366
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+```{r thompson-penguins}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -2002,7 +2147,7 @@ Perfectly Proportional Penguins, by [Cara Thompson](https://www.cararthompson.co
 
 ::::
 
-```{r}
+```{r countdown-penguins}
 countdown::countdown(
   minutes = 2,
   # left = 0, right = 0,
@@ -2029,7 +2174,7 @@ countdown::countdown(
 :::: {.columns}
 
 ::: {.column width="50%"}
-```{r}
+```{r glimmers}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
@@ -2058,7 +2203,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 ::::
 
-```{r}
+```{r countdown-glimmers}
 countdown::countdown(
   minutes = 2,
   # left = 0, right = 0,
@@ -2140,10 +2285,10 @@ countdown::countdown(
 
 <div class="page-center vertical-center">
 <p class="custom-subtitle bottombr">{{< fa mug-hot title="a mug with steam rising out the top" >}} Take a Break</p>
-<p class="caption-text">*~ This is the end of Lesson 1 (of 3) ~*</p>
+<!-- <p class="caption-text">*~ This is the end of Lesson 1 (of 3) ~*</p> -->
 </div>
 
-```{r}
+```{r countdown-break}
 countdown::countdown(
   minutes = 5,
   # left = 0, right = 0,
