some last min updates to relationships lecture

--- a/course-materials/keys/KEY-relationships.qmd
+++ b/course-materials/keys/KEY-relationships.qmd
@@ -6,7 +6,7 @@ toc: true
 ---
 
 ::: {.callout-note}
-This template follows the [relationships lecture](../lecture-slides/SLIDES-relationships.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
+This template follows the [relationships slides](../lecture-slides/SLIDES-relationships.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
 :::
 
 ## Setup
@@ -294,7 +294,7 @@ ggplot(stream_chem_data, aes(x = SO4, y = pH)) +
 
 - e.g. like you're looking down on a density plot
 - legend provides an estimate of the proportion of data points fall within a colored region (density of distribution of points sums to 1)
-    - interpreting legend: 0-2% of of points fall within a 1x1 square in the darkest blue region, while 26-28% fall within a 1x1 square in the brightest yellow region
+    - interpreting legend: 0-2% of of points fall within a 1x1 square in the darkest blue region, while 24-26% fall within a 1x1 square in the brightest yellow region
 
 ```{r 2d-density}
 #| eval: true
