--- a/course-materials/week4.qmd
+++ b/course-materials/week4.qmd
@@ -35,7 +35,7 @@ Save data to your class repo at `EDS-240-class-examples/week4/`:
 
 |Lecture | Dataset title | Download link | Notes |
 |--------|---------------|---------------|-------|
-|4.1 | Continuous precipitation and stream chemistry data, Hubbard Brook Ecosystem Study, 1963 – ongoing | **we'll use the `{metajam}` package to download the data programmatically from DataONE (see step C, below, for setup instructions),** *however, in the event that the API is down, you can access a backup copy on [Google Drive](https://drive.google.com/drive/folders/1mjpsGI4B9IbmCTpZvPQFDJxVsNp5ikHa?usp=drive_link){target="_blank"}*  | Find the [full data package](https://search.dataone.org/view/https%3A%2F%2Fpasta.lternet.edu%2Fpackage%2Fmetadata%2Feml%2Fknb-lter-hbr%2F208%2F14){target="_blank"} on DataONE; DataONE is a community driven project providing access to data across multiple member repositories, supporting enhanced search and discovery of Earth and environmental data. |
+|4.1 | Continuous precipitation and stream chemistry data, Hubbard Brook Ecosystem Study, 1963 – ongoing | **we'll use the `{metajam}` package to download the data programmatically from DataONE (see step C, below, for setup instructions),** *however, in the event that DataOne is down, you can access a backup copy on [Google Drive](https://drive.google.com/drive/folders/1mjpsGI4B9IbmCTpZvPQFDJxVsNp5ikHa?usp=drive_link){target="_blank"}*  | Find the [full data package](https://search.dataone.org/view/https%3A%2F%2Fpasta.lternet.edu%2Fpackage%2Fmetadata%2Feml%2Fknb-lter-hbr%2F208%2F14){target="_blank"} on DataONE; DataONE is a community driven project providing access to data across multiple member repositories, supporting enhanced search and discovery of Earth and environmental data. |
 : {.hover .bordered tbl-colwidths="[10,20,35,35]"}
 
 ### C. Download `.qmd` templates & review data wrangling code
