--- a/course-materials/lecture-slides/SLIDES-relationships.qmd
+++ b/course-materials/lecture-slides/SLIDES-relationships.qmd
@@ -85,7 +85,7 @@ In this lesson, we'll be exploring two main chart types:
 
 <br>
 
-[In this lesson, we'll be exploring two main primary chart types:]{.gray-text}
+[In this lesson, we'll be exploring two main chart types:]{.gray-text}
 
 <br>
 
@@ -838,7 +838,7 @@ ggplot(stream_chem_data, aes(x = SO4, y = pH)) +
   geom_density_2d_filled()
 ```
 
-In this example, 0-2% of of points fall within a 1x1 square in the darkest blue region, while 26-28% fall within a 1x1 square in the brightest yellow region. 
+In this example, 0-2% of of points fall within a 1x1 square in the darkest blue region, while 24-26% fall within a 1x1 square in the brightest yellow region. 
 
 ---
 
