--- a/course-materials/week4.qmd
+++ b/course-materials/week4.qmd
@@ -60,14 +60,11 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 
 ## {{< fa comments title="two speech bubbles" >}} Lab Materials {#lab-materials}
 
-::: {.callout-important}
-## TODO
-- create new lab exercise/content for practicing fundamental chart types -- hackathon style? provide a few different data sets, split into groups that get randomly assigned a dataset; must consider the chart types covered in lecture over the past 3 weeks and build an appropriate viz?
-:::
+
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [Lab 4 slides: ggplot themes](lab/LAB-SLIDES-usdm-theme.qmd){target="_blank"} | [Lab 4 exercise: USDM plot theme](lab/LAB-EXERCISE-usdm-theme.qmd){target="_blank"} | [Lab 4 solution](lab/LAB-SOLUTION-usdm-theme.qmd){target="_blank"} |
+| [Lab 4 slides](lab/LAB-SLIDES-fundamental-charts.qmd){target="_blank"} | [](){target="_blank"} | [](){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
