updated lab typo + fixed FMP2 link

--- a/course-materials/lab/LAB-SLIDES-fundamental-charts.qmd
+++ b/course-materials/lab/LAB-SLIDES-fundamental-charts.qmd
@@ -595,7 +595,7 @@ ggplot(stream_chem_data, aes(x = SO4, y = pH)) +
 ::: {.column width="50%"}
 [**A Decision Tree for Data Visualization**]{.body-text-l .teal-text}
 
-[The [From Data to Vis](https://www.data-to-viz.com/) website helps you:]{.body-text-m}
+[The [From Data to Viz](https://www.data-to-viz.com/) website helps you:]{.body-text-m}
 
 [- Navigate from your **data type** to the right chart]{.body-text-s}
 
