--- a/course-materials/week4.qmd
+++ b/course-materials/week4.qmd
@@ -72,5 +72,5 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 | Assignment Type | Assignment Title                                   | Date Assigned  | Date Due                   |
 |-----------------|----------------------------------------------------|----------------|----------------------------|
 | HW              | [Homework #2](assignments/HW2.qmd)                 | Wed 01/21/2026 | Wed 01/28/2026, 11:59pm PT |
-| FPM             | [Final Project Milestone #2](assignments/HW2.qmd)  | Wed 01/28/2026 | Wed 02/04/2026, 11:59pm PT |
+| FPM             | [Final Project Milestone #2](assignments/FPM2.qmd)  | Wed 01/28/2026 | Wed 02/04/2026, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
