Update pre lab prep for week 5

--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -65,14 +65,11 @@ I'll be using both of these (really wonderful and easy-to-use) tools during lect
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
-::: {.callout-important}
-## TODO
-- make this lab more interactive
-:::
 
-### A. (OPTIONAL) Bring a cool data viz!
 
-This week's lab section will be a time to explore, share, and discuss "non-standard" chart types, as well as those that present data using the fundamental chart types we've already discussed in different and exciting ways. You'll have time to browse some data viz during section, but it would be great to bring any inspiring examples you might have come across already.
+### A.Bring a cool data viz!
+
+This week's lab section will be a time to explore, share, and discuss "non-standard" chart types, as well as those that present data using the fundamental chart types we've already discussed in different and exciting ways. Ahead of lab, find a cool data viz that uses a "non-standard" chart type.If you are having trouble finding one, check some of the [resources](https://eds-240-data-viz.github.io/resources.html) on the course website. 
 
 ### B. (OPTIONAL) Get yourself a Bluesky account
 
