Update key to match template

--- a/course-materials/lecture-slides/SLIDES-colors.qmd
+++ b/course-materials/lecture-slides/SLIDES-colors.qmd
@@ -47,7 +47,7 @@ editor_options:
 
 ---
 
-## {#design-game data-menu-title="Design game"} 
+## {#design-game data-menu-title="Design game"visibility="hidden"} 
 
 [To celebrate our first day of chatting data viz design...]{.slide-title}
 
@@ -79,8 +79,9 @@ countdown::countdown(
   )
 ```
 
-
 ---
+
+
 
 ##  {#why-color data-menu-title="# Why use color? #" background="#047C90"}
 
