--- a/course-materials/keys/KEY-colors.qmd
+++ b/course-materials/keys/KEY-colors.qmd
@@ -4,6 +4,8 @@ subtitle: "Colors"
 author: "Your Name"
 date: 2026-02-04
 toc: true
+editor_options: 
+  chunk_output_type: console
 ---
 
 ::: {.callout-note}
@@ -104,10 +106,15 @@ con_color_plot +
   scale_color_distiller(palette = "BuPu")
 
 #..............for classed continuous color scales...............
+
+con_color_plot +
+  scale_color_fermenter(palette = "YlGnBu")
+
+
 # Accessibility tip: outline points to make light colors more visible
 ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, fill = body_mass_g)) + # notice switch from `color` > `fill`
   geom_point(shape = 21, size = 4, alpha = 0.8) + # notice point `shape`
-  scale_fill_distiller(palette = "YlGnBu")
+  scale_fill_fermenter(palette = "YlGnBu")
 ```
 
 ## `{paletteer}`
