--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -87,6 +87,6 @@ This week's lab section will be a time to explore, share, and discuss "non-stand
 | Assignment Type | Assignment Title                                                | Date Assigned  | Date Due                   |
 |-----------------|-----------------------------------------------------------------|----------------|----------------------------|
 | FPM             | [Final Project Milestone #2](assignments/HW2.qmd)               | Wed 01/28/2026 | Wed 02/04/2026, 11:59pm PT |
-| SR              | [Mid-course reflection (SR #2)](assignments/SR.qmd)  | Wed 02/04/2026 | Fri 02/06/2026, 11:59pm PT |
+| SR              | [Mid-course reflection (SR #2)](assignments/SR2.qmd)  | Wed 02/04/2026 | Fri 02/06/2026, 11:59pm PT |
 | HW              | [Homework #3](assignments/HW3.qmd)                              | Wed 02/04/2026 | Wed 02/11/2026, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
