--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -9,17 +9,30 @@ description: "Wednesday February 11^th^, 2026"
 #| echo: false
 #| fig-align: "center"
 #| out-width: "50%" 
-#| fig-alt: "Logos for Affinity Designer, Canva, and Google Docs"
-knitr::include_graphics(here::here("images", "graphic-design-logos.png"))
+#| fig-alt: "Affinity logo"
+knitr::include_graphics(here::here("images", "affinity-logo.png"))
 ```
 
 ::: {.center-text .gray-text}
-*Logos of various software which can be used for graphic design work. [Affinity Designer](https://affinity.serif.com/en-us/designer/){target="_blank"} (left), [Canva](https://www.canva.com/){target="_blank"} (top right), and [Google Docs](https://docs.google.com/){target="_blank"} (bottom right).*
+*The [Affinity](https://www.affinity.studio/){target="_blank"} logo*
 :::
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
 
-*coming soon*
+### A. Download / install Affinity for *free* 
+
+Head to [https://www.affinity.studio/](https://www.affinity.studio/){target="_blank"}, sign up, then download the correct version of Affinity for your operating system. Make sure you can open it successfully on your computer (it'll prompt you to login or create a free Canva account the first time you try opening Affinity).
+
+### B. Download saved ggplots
+
+We'll learn how to use Affinity to edit exported ggplots and transform them into (mini) infographics. Download both the [PNG](https://drive.google.com/file/d/1AHn-jJn80-li6W7fBjtX5sJEemJQ0l1J/view?usp=sharing){target="_blank"} and [PDF](https://drive.google.com/file/d/16H9M_mDSzyYqS7c_yB06jQIfSYhLH-Ce/view?usp=sharing){target="_blank"} versions of this plot ahead of class.
+
+## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
+
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-lines title="A file" >}} Exercise materials |
+|------------------------------------------------------------------------------------------|--------------------------------------------------------------|
+| [Graphic Design with Affinity](https://docs.google.com/presentation/d/1MG-v6P2PuaD5T8qHnFNeiMafVncV5BvcaPK33iI8CaI/edit?usp=sharing){target="_blank"}  | [Additional infographic elements](https://docs.google.com/document/d/1wRwi3WIblXqK9hzEm30VZmPePohAUGfl_NcEO2chxeg/edit?usp=sharing){target="_blank"} | 
+: {.hover .bordered tbl-colwidths="[50,50]"} 
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
