added Canva & The Noun Project instructions; updated new slide deck link

--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -21,18 +21,26 @@ knitr::include_graphics(here::here("images", "affinity-logo.png"))
 
 ### A. Download / install Affinity for *free* 
 
-Head to [https://www.affinity.studio/](https://www.affinity.studio/){target="_blank"}, sign up, then download the correct version of Affinity for your operating system. Make sure you can open it successfully on your computer (it'll prompt you to login or create a free Canva account the first time you try opening Affinity).
+Head to [https://www.affinity.studio/](https://www.affinity.studio/){target="_blank"}, create an account, and download the correct version of Affinity for your operating system. Once installed, open the app to confirm it runs successfully. The first time you launch Affinity, you’ll be prompted to log in or create a free Canva account.
+
+The free version of Affinity includes all the features you’ll likely need for this course. That said, since Affinity became a Canva product in 2024, you can unlock additional AI-powered tools if you have a Canva Premium account. Lucky for us, UCSB provides free Canva premium access for students, staff, and faculty. [Learn more](https://brand.ucsb.edu/tools-and-templates/canva#:~:text=Accessing%20Canva%20%2D%20Students){target="_blank"} about how to activate your Canva for Campus premium account.
 
 ### B. Download saved ggplots
 
 We'll learn how to use Affinity to edit exported ggplots and transform them into (mini) infographics. Download both the [PNG](https://drive.google.com/file/d/1AHn-jJn80-li6W7fBjtX5sJEemJQ0l1J/view?usp=sharing){target="_blank"} and [PDF](https://drive.google.com/file/d/16H9M_mDSzyYqS7c_yB06jQIfSYhLH-Ce/view?usp=sharing){target="_blank"} versions of this plot ahead of class.
 
+### C. (Optional, but recommended) Create an account with The Nount Project 
+
+[The Noun Project](https://thenounproject.com/){target="_blank"} provides access to millions of visual assets (symbols, icons, photos) for your graphic design needs. 
+
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-lines title="A file" >}} Exercise materials |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|
-| [Graphic Design with Affinity](https://docs.google.com/presentation/d/1MG-v6P2PuaD5T8qHnFNeiMafVncV5BvcaPK33iI8CaI/edit?usp=sharing){target="_blank"}  | [Additional infographic elements](https://docs.google.com/document/d/1wRwi3WIblXqK9hzEm30VZmPePohAUGfl_NcEO2chxeg/edit?usp=sharing){target="_blank"} | 
+| [MEDS Affinity Designer Workshop](https://docs.google.com/presentation/d/1PWl-XnRGhxpu2uZTJElP0Botw75CpJccAwT_vONIisI/edit?usp=sharing){target="_blank"}  | [Additional infographic elements](https://docs.google.com/document/d/1wRwi3WIblXqK9hzEm30VZmPePohAUGfl_NcEO2chxeg/edit?usp=sharing){target="_blank"} | 
 : {.hover .bordered tbl-colwidths="[50,50]"} 
+
+<!-- from 2025: https://docs.google.com/presentation/d/1MG-v6P2PuaD5T8qHnFNeiMafVncV5BvcaPK33iI8CaI/edit -->
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
